# HipInterceptLayer

./: .gitignore  CMakeLists.txt  CodeGen.hh  CodeGenKernelHeaders.hh  Comparator.cc  Comparator.hh  Interceptor.cc  Interceptor.hh  KernelManager.cc  KernelManager.hh  README.md  Tracer.cc  Tracer.hh  TypeMap.cc  TypeMap.hh  Types.hh  Util.hh  common.h  config.hh.in  hip-intercept.sh
tests/: CMakeLists.txt  testCodeGen.cpp  testComparator.cpp  testInterceptor.cpp  testKernelManager.cpp  testTypeMap.cpp
tests/data/: Kernels.cpp  computeNonbondedRepro.cpp  data_verification.cpp  test_kernels.cpp  test_kernels.hh  vectorAdd.cpp
